<resources>
    <string name="app_name">Notes Maker</string>
    <string name="register">Register</string>
    <string name="new_note">New Note</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>
